--- a/scenario.html
+++ b/scenario.html
@@ -22,12 +22,42 @@
       <div class="dashboard-container">
         <canvas id="arrowCanvas"></canvas>
         <div class="dashboard-grid">
-          <div class="agent-card" id="risk-analyst"><div class="bubble" id="bubble-risk-analyst"></div><h3>📊 Risk Analyst</h3><p>Agent Status: <span class="status idle">Idle</span></p></div>
-          <div class="agent-card" id="fraud-detection"><div class="bubble" id="bubble-fraud-detection"></div><h3>🛡️ Fraud Detection</h3><p>Agent Status: <span class="status idle">Idle</span></p></div>
-          <div class="agent-card" id="strategy-planner"><div class="bubble" id="bubble-strategy-planner"></div><h3>🎯 Strategy Planner</h3><p>Agent Status: <span class="status idle">Idle</span></p></div>
-          <div class="agent-card" id="compliance-officer"><div class="bubble" id="bubble-compliance-officer"></div><h3>⚖️ Compliance Officer</h3><p>Agent Status: <span class="status idle">Idle</span></p></div>
-          <div class="agent-card" id="client-outreach"><div class="bubble" id="bubble-client-outreach"></div><h3>🗣️ Client Outreach</h3><p>Agent Status: <span class="status idle">Idle</span></p></div>
-          <div class="agent-card" id="model-tuner"><div class="bubble" id="bubble-model-tuner"></div><h3>🔁 Model Tuner</h3><p>Agent Status: <span class="status idle">Idle</span></p></div>
+          <div class="agent-card" id="risk-analyst">
+            <div class="bubble" id="bubble-risk-analyst"></div>
+            <h3>📊 Risk Analyst</h3>
+            <p class="agent-desc">Monitors market data to identify and flag potential financial risks and anomalies.</p>
+            <p>Agent Status: <span class="status idle">Idle</span></p>
+          </div>
+          <div class="agent-card" id="fraud-detection">
+            <div class="bubble" id="bubble-fraud-detection"></div>
+            <h3>🛡️ Fraud Detection</h3>
+            <p class="agent-desc">Analyzes transaction patterns in real-time to detect and prevent fraudulent activities.</p>
+            <p>Agent Status: <span class="status idle">Idle</span></p>
+          </div>
+          <div class="agent-card" id="strategy-planner">
+            <div class="bubble" id="bubble-strategy-planner"></div>
+            <h3>🎯 Strategy Planner</h3>
+            <p class="agent-desc">Formulates strategic responses, assesses business impact, and identifies new opportunities.</p>
+            <p>Agent Status: <span class="status idle">Idle</span></p>
+          </div>
+          <div class="agent-card" id="compliance-officer">
+            <div class="bubble" id="bubble-compliance-officer"></div>
+            <h3>⚖️ Compliance Officer</h3>
+            <p class="agent-desc">Ensures all proposed actions adhere to legal regulations and internal policies.</p>
+            <p>Agent Status: <span class="status idle">Idle</span></p>
+          </div>
+          <div class="agent-card" id="client-outreach">
+            <div class="bubble" id="bubble-client-outreach"></div>
+            <h3>🗣️ Client Outreach</h3>
+            <p class="agent-desc">Manages and executes communication with clients, from marketing to critical alerts.</p>
+            <p>Agent Status: <span class="status idle">Idle</span></p>
+          </div>
+          <div class="agent-card" id="model-tuner">
+            <div class="bubble" id="bubble-model-tuner"></div>
+            <h3>🔁 Model Tuner</h3>
+            <p class="agent-desc">Continuously learns from new data and events to automatically improve AI models.</p>
+            <p>Agent Status: <span class="status idle">Idle</span></p>
+          </div>
         </div>
       </div>
 
