--- a/scenario.html
+++ b/scenario.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FinSecure AI Banking Simulation</title>
+  <title>Agentic AI Simulation</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="main.js"></script>
 </head>
 <body>
 
   <div class="header-container">
-    <h1>FinSecure AI Banking Simulation</h1>
-    <p>Choose a scenario to simulate agentic AI behavior in banking:</p>
+    <h1></h1>
+    <p></p>
     <div>
       </div>
   </div>
@@ -22,42 +22,12 @@
       <div class="dashboard-container">
         <canvas id="arrowCanvas"></canvas>
         <div class="dashboard-grid">
-          <div class="agent-card" id="risk-analyst">
-            <div class="bubble" id="bubble-risk-analyst"></div>
-            <h3>📊 Risk Analyst</h3>
-            <p class="agent-desc">Monitors market data to identify and flag potential financial risks and anomalies.</p>
-            <p>Agent Status: <span class="status idle">Idle</span></p>
-          </div>
-          <div class="agent-card" id="fraud-detection">
-            <div class="bubble" id="bubble-fraud-detection"></div>
-            <h3>🛡️ Fraud Detection</h3>
-            <p class="agent-desc">Analyzes transaction patterns in real-time to detect and prevent fraudulent activities.</p>
-            <p>Agent Status: <span class="status idle">Idle</span></p>
-          </div>
-          <div class="agent-card" id="strategy-planner">
-            <div class="bubble" id="bubble-strategy-planner"></div>
-            <h3>🎯 Strategy Planner</h3>
-            <p class="agent-desc">Formulates strategic responses, assesses business impact, and identifies new opportunities.</p>
-            <p>Agent Status: <span class="status idle">Idle</span></p>
-          </div>
-          <div class="agent-card" id="compliance-officer">
-            <div class="bubble" id="bubble-compliance-officer"></div>
-            <h3>⚖️ Compliance Officer</h3>
-            <p class="agent-desc">Ensures all proposed actions adhere to legal regulations and internal policies.</p>
-            <p>Agent Status: <span class="status idle">Idle</span></p>
-          </div>
-          <div class="agent-card" id="client-outreach">
-            <div class="bubble" id="bubble-client-outreach"></div>
-            <h3>🗣️ Client Outreach</h3>
-            <p class="agent-desc">Manages and executes communication with clients, from marketing to critical alerts.</p>
-            <p>Agent Status: <span class="status idle">Idle</span></p>
-          </div>
-          <div class="agent-card" id="model-tuner">
-            <div class="bubble" id="bubble-model-tuner"></div>
-            <h3>🔁 Model Tuner</h3>
-            <p class="agent-desc">Continuously learns from new data and events to automatically improve AI models.</p>
-            <p>Agent Status: <span class="status idle">Idle</span></p>
-          </div>
+          <div class="agent-card" id="agent1"><h3 id="agent1-h3"></h3><div class="bubble" id="bubble-agent1"></div><p id="agent1-desc" class="agent-desc"></p><p>Agent Status: <span class="status idle">Idle</span></p></div>
+          <div class="agent-card" id="agent2"><h3 id="agent2-h3"></h3><div class="bubble" id="bubble-agent2"></div><p id="agent2-desc" class="agent-desc"></p><p>Agent Status: <span class="status idle">Idle</span></p></div>
+          <div class="agent-card" id="agent3"><h3 id="agent3-h3"></h3><div class="bubble" id="bubble-agent3"></div><p id="agent3-desc" class="agent-desc"></p><p>Agent Status: <span class="status idle">Idle</span></p></div>
+          <div class="agent-card" id="agent4"><h3 id="agent4-h3"></h3><div class="bubble" id="bubble-agent4"></div><p id="agent4-desc" class="agent-desc"></p><p>Agent Status: <span class="status idle">Idle</span></p></div>
+          <div class="agent-card" id="agent5"><h3 id="agent5-h3"></h3><div class="bubble" id="bubble-agent5"></div><p id="agent5-desc" class="agent-desc"></p><p>Agent Status: <span class="status idle">Idle</span></p></div>
+          <div class="agent-card" id="agent6"><h3 id="agent6-h3"></h3><div class="bubble" id="bubble-agent6"></div><p id="agent6-desc" class="agent-desc"></p><p>Agent Status: <span class="status idle">Idle</span></p></div>
         </div>
       </div>
 
